--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -485,7 +485,11 @@
           }
         }
       }
-
+      &:last-child{
+        a{
+          padding-right: 0;
+        }
+      }
       ul {
         &.submenu {
           // padding: 0px;
